@@ -29,21 +29,6 @@
 #include <glib.h>
 #include <time.h>
 
-/**
- * @struct openvas_logging
- * @brief OpenVAS Logging stores the parameters loaded from a log configuration
- *        file.
- */
-typedef struct
-{
-  gchar *log_domain;         ///< Affected logdomain e.g libnasl.
-  gchar *prepend_string;     ///< Prepend this string before every message.
-  gchar *prepend_time_format; ///< If prependstring has %t, format for strftime.
-  gchar *log_file;           ///< Where to log to.
-  GLogLevelFlags default_level; ///< What severity level to use as default.
-  GIOChannel *log_channel;   ///< Gio Channel - FD holder for logfile.
-} openvas_logging_t;
-
 GSList *load_log_configuration (gchar * config_file);
 
 void free_log_configuration (GSList * logdomain_list);
